Zadanie 3/tests/funs6.expected
Error: Function identifier 'pow' used as a variable: line 6
Error: Function identifier 'pow' used as a variable: line 8
Error: Variable 'res' undefined in current scope: line 8
Error: Function identifier 'pow' used as a variable: line 11
