Zadanie 3/tests/funs6.actual
Visiting program
Used undefined symbol res in line 8
Type checking finished
